--- a/index.html
+++ b/index.html
@@ -5,6 +5,199 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
-</html>
+  <body>
+    <div class="box">
+      <header class="header">
+        <nav class="header__menu">
+          <ul class="header__links-list">
+            <li class="header__list-item-no-bullit">
+              <a class="header__link-header__link-active" href="#!">главная</a>
+            </li>
+            <li>
+              <a class="header__link" href="#!">посмотреть лоты</a>
+            </li>
+            <li>
+              <a class="header__link" href="#!">об аукционе </a>
+            </li>
+          </ul>
+        </nav>
+        <a class="header__logo">
+          <img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="Оно тебе надо">
+          </a>
+          <nav class="contacts">
+            <ul class="contacts__list"></ul>
+            <li class="telephone" href="tel:+99995555555">+9 999 555 5555</li>
+            <li class="e-mail" href="mailto:info@sobaka.ge">info@sobaka.ge</li>
+            <li class="address">наб. Принсенграхт 263-265 Амстердам</li>
+          </nav>
+        </header>
+        <main>
+        <section class="cover">
+          <div class="overlay">
+          </div>
+          <h1 class="cover__title">
+            <span class="aligned-text"
+            >о<span class="letter-spacing-extended">н</span></span
+          >о
+          <span class="aligned-text aligned-text_center"
+            >те<span class="letter-spacing-extended">б</span>е</span
+          >
+          <span class="aligned-text aligned-text_right"
+            ><span class="letter-spacing-extended">н</span>ад<span
+              class="no-letter-spacing"
+              >о</span>
+          </span>
+          </h1>
+          <div class="cover__description">
+            <h2 class="cover__description-text">
+              Аукцион вещей, в которые никто не верил
+            </h2>
+            <button class="bet-button" type="button">Сделать ставку</button>
+          </div>
+        </section>
+        <section class="lots__card">
+          <h2 class="lots__heading">Лоты</h2>
+          <ul class="lots__card-list">
+            <li class="lots__card-list-item">
+              <a href="#!" class="card-link">
+                <article class="card card_type_film">
+                  <div class="overlay">
+                  </div>
+                  <h3 class="card__title">
+                    Фильм режиссёра, который бросил киношколу
+                  </h3>
+                  <p class="card__text">
+                    Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                    ставка, если бы вы не знали, что режиссёр — Пол Томас
+                    Андерсон?
+                  </p>
+                </article>
+              </a>
+            </li>
+            <li class="lots__card-list-item">
+              <a href="#!" class="card-link">
+                <article class="card card_type_book">
+                  <div class="overlay">
+                  </div>
+                  <h3 class="card__title">
+                    Книга, где описан один скучный день из жизни рекламного
+                    агента
+                  </h3>
+                  <p class="card__text">
+                    Объёмом почти в тысячу страниц. Иногда без знаков препинания
+                    и с переходами на древнеанглийский. В ней одновременно
+                    рассказывается о 16 июня 1904 года и об истории литературы,
+                    начиная с античных времён. И это всё накладывается на
+                    эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                    Джеймса Джойса?
+                  </p>
+                </article>
+              </a>
+            </li>
+            <li class="lots__card-list-item">
+              <a href="#0" class="card-link">
+                <article class="card card_type_picture">
+                  <div class="overlay"></div>
+                  <h3 class="card__title">
+                    Картина, которую повторит даже 5-летний сын маминой подруги
+                  </h3>
+                  <p class="card__text">
+                    Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                    что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                    котиков… Сколько бы вы на такое поставили, если бы не знали,
+                    что это — одна из революционных работ Кандинского?
+                  </p>
+                </article>
+              </a>
+            </li>
+          </ul>
+          <a class="lots__look-more-link" href="#!">посмотреть больше</a>
+        </section>
+        <section class="about">
+          <div class="about__logo">
+            <img
+              class="about__logo-image"
+              alt="Оно Тебе Надо"
+              src="./images/logo-white.svg"
+            />
+          </div>
+          <h3 class="about__title">Об аукционе</h3>
+          <div class="about__text">
+            <p>
+              Здесь вы не встретите очередное пафосное собрание невероятно
+              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
+              на один аукцион. Потому что кому нужен дневник девочки-подростка
+              или картина, которую может нарисовать даже ребёнок? Кому нужны все
+              эти странные вещи, созданные любителями?
+            </p>
+            <p>
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё
+              время. В пух и прах растерзанные критиками. Непринятые и
+              непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на критику, кажущуюся простоту или сложность, сейчас без этих
+              лотов невозможно представить современную культуру. Когда в эти
+              вещи не верил никто, продолжали верить их создатели. И сейчас эти
+              лоты стали культовыми.
+            </p>
+          </div>
+        </section>
+        <footer class="footer">
+          <nav class="contacts">
+            <ul class="contacts__list"></ul>
+            <li class="telephone" href="tel:+99995555555">+9 999 555 5555</li>
+            <li class="e-mail" href="mailto:info@sobaka.ge">info@sobaka.ge</li>
+            <li class="address">наб. Принсенграхт 263-265. <br />Амстердам</li>
+          </nav>
+          <nav>
+            <ul class="footer__menu-list">
+              <li class="footer__menu-list-item">
+                <a class="footer__link-active" href="#!">главная</a>
+              </li>
+              <li class="footer__menu-list-item">
+                <a href="#!">посмотреть лоты</a>
+              </li>
+              <li class="footer__menu-list-item">
+                <a href="#!">об аукционе</a>
+              </li>
+            </ul>
+          </nav>
+          <ul class="footer__social-list">
+            <li class="footer__social-list-item">
+              <a href="https://www.youtube.com/" class="footer__social-link">
+                <img
+                  src="./images/yt.svg"
+                  alt="Ссылка на Ютуб"
+                  class="footer__social-icon"
+                />
+              </a>
+            </li>
+            <li class="footer__social-list-item">
+              <a href="https://vk.com/" class="footer__social-link">
+                <img
+                  src="./images/vk.svg"
+                  alt="Ссылка на ВКонтакте"
+                  class="footer__social-icon"
+                />
+              </a>
+            </li>
+            <li class="footer__menu-list-item">
+              <a href="https://www.pinterest.com/" class="footer__social-link">
+                <img
+                  src="./images/pinterest.svg"
+                  alt="Ссылка на Пинтерест"
+                  class="footer__social-icon"
+                />
+              </a>
+            </li>
+          </ul>
+        </footer>
+      </div>
+    </body>
+  </html>
