--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <ul class="contacts__list"></ul>
             <li class="telephone" href="tel:+99995555555">+9 999 555 5555</li>
             <li class="e-mail" href="mailto:info@sobaka.ge">info@sobaka.ge</li>
-            <li class="address">наб. Принсенграхт 263-265. <br />Амстердам</li>
+            <li class="address">наб. Принсенграхт 263-265 Амстердам</li>
           </nav>
           <nav>
             <ul class="footer__menu-list">
